syntax = "proto3";

message TemplateAtomic {
    requiredstring prefix = 1;
    requiredstring postfix = 2;
    requiredstring middle_string = 3;
    requiredstring middle_string_empty = 4;
    requiredstring middle_numeric = 5;
    requiredstring middle_boolean = 6;
    requiredstring ipv4 = 7;
    requiredstring email = 8;
}